fixed linespacing for mobile

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -55,7 +55,7 @@
     
     p {
         font-size: 0.8rem;
-        line-height: 1rem;
+        line-height: 1.2rem;
     }
 
     i {
@@ -132,7 +132,7 @@
     /* media queries for footer */
     p.creativeDesign {
         font-size: 0.8rem;
-        line-height: 1rem;
+        // line-height: 1rem;
     }
 
     p.designInsp {
