--- a/styles/style.css
+++ b/styles/style.css
@@ -1065,7 +1065,7 @@ p.location a:focus {
 
   p {
     font-size: 0.8rem;
-    line-height: 1rem;
+    line-height: 1.2rem;
   }
 
   i {
@@ -1144,7 +1144,6 @@ nav label.mobileNav {
   /* media queries for footer */
   p.creativeDesign {
     font-size: 0.8rem;
-    line-height: 1rem;
   }
 
   p.designInsp {
